# atg

./: .gitignore  CHANGELOG.md  Cargo.toml  JUSTFILE  LICENSE  README.md  RELEASE_CHECKLIST.md  release
src/: cli.rs  lib.rs  main.rs  reader_wrapper.rs
src/bed/: mod.rs  record.rs  writer.rs
src/fasta/: mod.rs  reader.rs  writer.rs
src/genepred/: mod.rs  writer.rs
src/genepredext/: mod.rs  reader.rs  writer.rs
src/gtf/: constants.rs  mod.rs  reader.rs  record.rs  transcript.rs  utils.rs  writer.rs
src/models/: codon.rs  exon.rs  frame.rs  mod.rs  sequence.rs  transcript.rs  transcripts.rs  utils.rs
src/refgene/: constants.rs  mod.rs  reader.rs  utils.rs  writer.rs
src/tests/: mod.rs  transcripts.rs
src/utils/: errors.rs  fastareader.rs  genomic_relations.rs  mod.rs
tests/data/: NM_001365057.2.genepredext  NM_001365057.2.gtf  NM_001365057.2.refgene  NM_001365408.1.genepredext  NM_001365408.1.gtf  NM_001365408.1.refgene  NM_001371720.1.genepredext  NM_001371720.1.gtf  NM_001371720.1.refgene  NM_001385228.1_2.gtf  NM_201550.4.genepredext  NM_201550.4.gtf  NM_201550.4.refgene  example.genepredext  example.gtf  example.refgene  id-IGHM.gtf  small.fasta  small.fasta.fai  test.refgene  tests.gtf
