[package]
name = "atg"
version = "0.5.0"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
edition = "2018"
description = "A utility to handle transcripts for genomics and transcriptomics"
readme = "README.md"
homepage = "https://github.com/anergictcell/atg"
repository = "https://github.com/anergictcell/atg"
license = "MIT"
keywords = ["bioinformatics", "genomics", "transcriptomics", "transcript", "genetics"]
categories = ["science", "data-structures", "command-line-utilities"]

[dependencies]
atglib = "0.1"
clap = "2.33.3"
log = "0.4"
loggerv = "0.7"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
