[package]
name = "atg"
version = "0.8.1"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
edition = "2018"
description = "Convert transcripts between different file formats"
readme = "README.md"
homepage = "https://github.com/anergictcell/atg"
repository = "https://github.com/anergictcell/atg"
license = "MIT"
keywords = ["bioinformatics", "genomics", "transcriptomics", "transcript", "genetics"]
categories = ["science", "data-structures", "command-line-utilities"]

[dependencies]
atglib = "0.2.0"
clap = {version = "4.0.0", features = ["derive"]}
log = "0.4"
loggerv = "0.7"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
s3reader = "0.4.0"

[profile.release]
lto = true
