[package]
name = "atg"
version = "0.8.4"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
edition = "2018"
description = "Convert transcripts between different file formats"
readme = "README.md"
homepage = "https://github.com/anergictcell/atg"
repository = "https://github.com/anergictcell/atg"
license = "MIT"
keywords = ["bioinformatics", "genomics", "transcriptomics", "transcript", "genetics"]
categories = ["science", "data-structures", "command-line-utilities"]

[dependencies]
atglib = "0.2.1"
clap = {version = "4.0.0", features = ["derive"]}
log = "0.4"
loggerv = "0.7"
bincode = "1.3.3"
# See https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372 for why we pin serde
serde = { version = "1.0.156, < 1.0.172", features = ["derive"] }
s3reader = "1"

[profile.release]
lto = true
